# Vulnerable-MCP-Server

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  pytest.ini  server.py
.github/workflows/: ci.yml
agents/: __init__.py  base_agent.py  coding_agent.py  dashboard.py  debugging_agent.py  docs_agent.py  orchestrator.py  test_data_agent.py  testing_agent.py
challenges/: advanced.yaml  beginner.yaml  intermediate.yaml  multi_vector.yaml  oauth.yaml  rug_pull.yaml  tool_shadowing.yaml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  GETTING_STARTED.md  PRD.md  ROADMAP.md  SCOPE.md  SYSTEM_DESIGN.md  THREAT_MODEL.md  USAGE.md
flags/: flags.py
resources/: sensitive.py
tests/: conftest.py  helpers.py  test_advanced.py  test_beginner.py  test_config.py  test_ctf_system.py  test_flags.py  test_intermediate.py  test_modules.py  test_multi_vector.py  test_oauth.py  test_resources.py  test_rug_pull.py  test_sandbox.py  test_tool_shadowing.py
tests/fixtures/: payloads.py
tests/scanner_compat/: test_mcp_scan.py
vulnerabilities/: __init__.py  auth.py  base.py  dos.py  exfiltration.py  injection.py  multi_vector.py  oauth.py  prompt_injection.py  rug_pull.py  tool_poisoning.py  tool_shadowing.py
