[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vulnerable-mcp-server"
version = "0.1.0"
description = "Deliberately vulnerable MCP server for security education and CTF training"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "security", "ctf", "training", "vulnerable"]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
    "uvicorn>=0.20.0",
]

[project.scripts]
vulnerable-mcp = "server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
